--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <script type="py" src="ui.py" config="pyscript.toml"></script>
+    <script type="py" src="/src/ui.py" config="pyscript.toml"></script>
     <h2>CS 150 24.1 Lab 5 Output Validator <span id="version"></span><span id="loading">(Loading...)</span></h2>
     <div class="content">
       <div class="content-input">
